src/gc-arena/tests/ui/multiple_require_static.stderr
error: Cannot specify multiple `#[collect]` attributes!
 --> $DIR/multiple_require_static.rs:7:7
  |
7 |     #[collect(require_static)]
  |       ^^^^^^^
